# python_llm

./: .coverage  .gitignore  README.md  calculate.py  chat  chat.py  endpoint.py  gradio_server.py  greet.py  grep.py  ls.py  pyproject.toml  screenrecording1.mov  t_txt  test_integration.py  utf16.txt
.github/workflows/: ci.yml  doctest.yml  integration_test.yml  test.yml  test_integration.yml
cmc_csci005_yourname.egg-info/: PKG-INFO  SOURCES.txt
cmc_csci005_yyuan29.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cmc_csci040_yyuan29.egg-info/: PKG-INFO  SOURCES.txt
python_llm/: .coverage  .gitmodules  README.md  chat.py  endpoint.py  gradio_server.py
python_llm/.github/workflows/: flake8.yml
python_llm/test_projects/project001/: .gitignore  README.md  pyproject.toml
python_llm/test_projects/project001/.github/workflows/: doctests.yaml  flake8.yaml
python_llm/test_projects/project001/example/: READMEhtml
python_llm/test_projects/project001/markdown_compiler/: __main__.py
python_llm/test_projects/project_02_webscraping/: README.md  iphone.csv  iphone.json  laptop.csv  stuffed_animals.json
python_llm/test_projects/yyuan29.github.io/: about.html  index.html  styles.css
python_llm/tools/: calculate.py  ls.py
test_projects/project001/example/: README.md
test_projects/project001/markdown_compiler/: __init__.py  __main__.py
test_projects/project_02_webscraping/: ebay-dl.py  laptop.json  stuffed_animals.csv
test_projects/yyuan29.github.io/: README.md  socials.html
tools/: calculate.py  cat.py  compact.py  doctests.py  grep.py  ls.py  pip_install.py  rm.py  utils.py  write_file.py  write_files.py
workflows/: test.yml
(+2 files in other folders)
