[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown_compiler"
version = "0.1.0"
description = "A markdown compiler"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["markdown_compiler*"]

[project.scripts]
markdown-compiler = "markdown_compiler.__main__:main"
